@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.4.40
 
+  *) mod_reqtimeout: Fix default rates missing (not applied) in 2.4.39.
+     PR 63325. [Yann Ylavic]
+
   *) mod_info: Fix output of server settings for PIPE_BUF in mod_info in
      the rare case that PIPE_BUF is defined. [Rainer Jung]
 
